Updated Controller documentation
