# app/Http/Controllers/TaskController.php
@@ -18,64 +18,87 @@ class TaskController extends Controller
 
     /**
      * @OA\Get(
-     *     path="/api/tasks",
-     *     summary="Get all tasks",
+     *     path="/api/todo/{todo_id}/tasks",
+     *     summary="Get all tasks for a specific todo list",
      *     tags={"Tasks"},
+     *     @OA\Parameter(
+     *         name="todo_id",
+     *         in="path",
+     *         description="ID of the todo list",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),
      *     @OA\Response(response="200", description="List of tasks"),
-     *     @OA\Response(response="500", description="Server error")
+     *     @OA\Response(response="400", description="Validation errors"),
+     *     @OA\Response(response="500", description="Server error"),
+     *     security={{"bearerAuth": {}}}
      * )
      * Display a listing of the resource.
+     *
+     * @param string $todo_id The ID of the todo list to fetch tasks from.
+     * @return JsonResponse The response containing the list of tasks or an error message.
      */
     public function index(string $todo_id)
     {
-        $userId = request()->user()->id; // Obtém o ID do usuário logado
+        $userId = request()->user()->id;
 
         // Validação do ID para verificar se existe e se pertence ao usuário logado
         $validator = Validator::make(['id' => $todo_id, 'user_id' => $userId], [
-            'id' => 'required|exists:todo_lists,id,user_id,' . $userId, // Valida se o ID existe na tabela todo_lists e se pertence ao usuário logado
+            'id' => 'required|exists:todo_lists,id,user_id,' . $userId,
         ]);
 
         if ($validator->fails()) {
-            return ApiResponse::error($validator->errors()); // Retorna erro se a validação falhar
+            return ApiResponse::error($validator->errors());
         }
 
         $tasks = $this->taskService->getAllByTodoListId($todo_id);
-        return ApiResponse::success($tasks, "Tasks listed Sucessfully");
+        return ApiResponse::success($tasks, "Tasks listed successfully");
     }
 
     /**
      * @OA\Post(
-     *     path="/api/tasks",
-     *     summary="Create a new task",
+     *     path="/api/todo/{todo_id}/tasks",
+     *     summary="Create a new task for a specific todo list",
      *     tags={"Tasks"},
+     *     @OA\Parameter(
+     *         name="todo_id",
+     *         in="path",
+     *         description="ID of the todo list",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),
      *     @OA\RequestBody(
      *         required=true,
      *         @OA\JsonContent(
-     *             required={""title"", "todo_list_id"},
-     *             @OA\Property(property=""title"", type="string", example="My Task"),
+     *             required={"title"},
+     *             @OA\Property(property="title", type="string", example="My Task"),
      *             @OA\Property(property="description", type="string", example="Task description"),
-     *             @OA\Property(property="todo_list_id", type="integer", example=1)
      *         )
      *     ),
      *     @OA\Response(response="201", description="Task created successfully"),
      *     @OA\Response(response="400", description="Validation errors"),
-     *     @OA\Response(response="500", description="Server error")
+     *     @OA\Response(response="500", description="Server error"),
+     *     security={{"bearerAuth": {}}}
      * )
      * Store a newly created resource in storage.
+     *
+     * @param Request $request The request object containing task data.
+     * @param string $todo_id The ID of the todo list to associate with the new task.
+     * @return JsonResponse The response containing the created task or an error message.
      */
     public function store(Request $request, $todo_id)
     {
-        $userId = request()->user()->id; // Obtém o ID do usuário logado
+        $userId = request()->user()->id;
 
         // Extrai todos os dados do request e adiciona o todo_id
         $data = $request->all();
-        $data['todo_list_id'] = $todo_id; // Adiciona o todo_id ao array de dados
+        $data['todo_list_id'] = $todo_id;
 
         // Validação dos dados
         $validator = Validator::make($data, [
             'title' => 'required|string|max:255',
             'description' => 'nullable|string',
-            'todo_list_id' => 'required|exists:todo_lists,id,user_id,' . $userId, // Valida se o ID existe na tabela todo_lists e se pertence ao usuário logado
+            'todo_list_id' => 'required|exists:todo_lists,id,user_id,' . $userId,
         ]);
 
         if ($validator->fails()) {
@@ -88,21 +111,33 @@ class TaskController extends Controller
 
     /**
      * @OA\Get(
-     *     path="/api/tasks/{id}",
-     *     summary="Get a task by ID",
+     *     path="/api/todo/{todo_id}/tasks/{task_id}",
+     *     summary="Get a task by ID for a specific todo list",
      *     tags={"Tasks"},
      *     @OA\Parameter(
-     *         name="id",
+     *         name="todo_id",
      *         in="path",
-     *         description="Task ID",
+     *         description="ID of the todo list",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Parameter(
+     *         name="task_id",
+     *         in="path",
+     *         description="ID of the task",
      *         required=true,
      *         @OA\Schema(type="integer")
      *     ),
      *     @OA\Response(response="200", description="Task details"),
      *     @OA\Response(response="404", description="Task not found"),
-     *     @OA\Response(response="500", description="Server error")
+     *     @OA\Response(response="500", description="Server error"),
+     *     security={{"bearerAuth": {}}}
      * )
      * Display the specified resource.
+     *
+     * @param string $todoId The ID of the todo list to which the task belongs.
+     * @param string $taskId The ID of the task to fetch.
+     * @return JsonResponse The response containing the task details or an error message.
      */
     public function show(string $todoId, string $taskId)
     {
@@ -130,21 +165,28 @@ class TaskController extends Controller
 
     /**
      * @OA\Put(
-     *     path="/api/tasks/{id}",
-     *     summary="Update a task",
+     *     path="/api/todo/{todo_id}/tasks/{task_id}",
+     *     summary="Update a task for a specific todo list",
      *     tags={"Tasks"},
      *     @OA\Parameter(
-     *         name="id",
+     *         name="todo_id",
      *         in="path",
-     *         description="Task ID",
+     *         description="ID of the todo list",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Parameter(
+     *         name="task_id",
+     *         in="path",
+     *         description="ID of the task",
      *         required=true,
      *         @OA\Schema(type="integer")
      *     ),
      *     @OA\RequestBody(
      *         required=true,
      *         @OA\JsonContent(
-     *             required={""title""},
-     *             @OA\Property(property=""title"", type="string", example="Updated Task"),
+     *             required={"title"},
+     *             @OA\Property(property="title", type="string", example="Updated Task"),
      *             @OA\Property(property="description", type="string", example="Updated description"),
      *             @OA\Property(property="completed", type="boolean", example=true)
      *         )
@@ -152,9 +194,15 @@ class TaskController extends Controller
      *     @OA\Response(response="200", description="Task updated successfully"),
      *     @OA\Response(response="400", description="Validation errors"),
      *     @OA\Response(response="404", description="Task not found"),
-     *     @OA\Response(response="500", description="Server error")
+     *     @OA\Response(response="500", description="Server error"),
+     *     security={{"bearerAuth": {}}}
      * )
      * Update the specified resource in storage.
+     *
+     * @param Request $request The request object containing updated task data.
+     * @param string $todoId The ID of the todo list to which the task belongs.
+     * @param string $taskId The ID of the task to update.
+     * @return JsonResponse The response containing the updated task or an error message.
      */
     public function update(Request $request, string $todoId, string $taskId)
     {
@@ -184,29 +232,57 @@ class TaskController extends Controller
         return ApiResponse::success($task, 'Task updated successfully');
     }
 
-    public function destroy(Request $request, string $todoId, string $taskId)
+    /**
+     * @OA\Delete(
+     *     path="/api/todo/{todo_id}/tasks/{task_id}",
+     *     summary="Delete a task for a specific todo list",
+     *     tags={"Tasks"},
+     *     @OA\Parameter(
+     *         name="todo_id",
+     *         in="path",
+     *         description="ID of the todo list",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Parameter(
+     *         name="task_id",
+     *         in="path",
+     *         description="ID of the task",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Response(response="204", description="Task deleted successfully"),
+     *     @OA\Response(response="404", description="Task not found"),
+     *     @OA\Response(response="500", description="Server error"),
+     *     security={{"bearerAuth": {}}}
+     * )
+     * Remove the specified resource from storage.
+     *
+     * @param string $todoId The ID of the todo list to which the task belongs.
+     * @param string $taskId The ID of the task to delete.
+     * @return JsonResponse The response indicating the result of the deletion.
+     */
+    public function destroy(string $todoId, string $taskId)
     {
-        \Log::info('Attempting to delete task', ['todoId' => $todoId, 'taskId' => $taskId]);
+        $userId = request()->user()->id;
 
-        $userId = $request->user()->id; // Obtém o ID do usuário logado
-
-        $requestData = [
-            'id' => $taskId,
-            'todo_list_id' => $todoId,
+        $data = [
+            "id" => $taskId,
+            "todo_list_id" => $todoId,
         ];
 
         // Validação dos dados
-        $validator = Validator::make($requestData, [
+        $validator = Validator::make($data, [
             'id' => 'required|exists:tasks,id,todo_list_id,' . $todoId,
             'todo_list_id' => 'required|exists:todo_lists,id,user_id,' . $userId,
         ]);
 
         if ($validator->fails()) {
-            return ApiResponse::error($validator->errors()->toJson(), 400);
+            return ApiResponse::error($validator->errors());
         }
 
-        // Deletar a tarefa usando o ID da tarefa
-        $this->taskService->delete($taskId); // Corrigido para deletar a tarefa específica
-        return ApiResponse::success(null, 'Task deleted successfully', 204);
+        // Deleta a tarefa
+        $this->taskService->delete($taskId);
+        return response()->json(null, 204);
     }
 }
